Features ## Circle Beat widget - Increased size of hit area by 6 - Added patterns to make it more difficult [normal, half beats, quarter beats, burst] - Made Notes object pooling dynmaic - Adding songs work now [made it a form, have to manually put in BPM] - Added score system [not saved to local storage] - Fixed out of bounds bar not working - Changed default position of a new disc from [0, 0] -> [-100, -100]

--- a/src/index.scss
+++ b/src/index.scss
@@ -958,6 +958,7 @@ body{
     border: 2px solid black;
     width: 100%;
     height: 100%;
+    text-align: center;
     &:focus{
         outline: none;
     }
